# cmake_demo

./: README.MD  README.md
cmake_fei/: CMakeLists.txt  README.MD
cmake_fei/doc/: CMakeLists.txt
cmake_fei/libhello/: CMakeLists.txt  hello.c  hello.h
cmake_fei/src/: CMakeLists.txt  main.c
cmake_mathfei_lib/: CMakeLists.txt
cmake_mathfei_lib/libmathfei/: CMakeLists.txt  mathfei.c  mathfei.h
hello_use_exlib/: CMakeLists.txt
hello_use_exlib/src/: CMakeLists.txt  Makefile  main.c
make_lib/: Makefile  position.c
